...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                        <state key="normal" title="Member">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                        <state key="normal" title="Guest">
                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                        </state>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repo Owner Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kun-7Q-7wZ">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <rect key="frame" x="0.0" y="66" width="382" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Repo Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aBh-3T-IVQ">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                        <rect key="frame" x="0.0" y="132" width="382" height="50"/>
                                                        <subviews>
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Auth Token" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Js2-co-K7d">
                                                                <rect key="frame" x="0.0" y="0.0" width="382" height="50"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                                                <rect key="frame" x="0.0" y="3" width="382" height="48"/>
                                                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                                                <state key="normal" title="Submit">
                                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                </state>
...
