...
    private var nav: NavigationViewControllerProtocol?
    weak var delegate: LoginViewActionDelegate?
    
    override func viewDidLoad() {
        super.viewDidLoad()
        nav?.setNavigationBar(hidden: false, animation: true)
        self.title = "Login"
        uiSetup()
        // Do any additional setup after loading the view.
    }
    
    private func uiSetup() {
        loginButton.applyGradient(colours: UIColor.gradientColors, locations: [0.5 , 1.0])
...
